2009-09-04  Chris Toshok  <toshok@ximian.com>

	* VSM/System/Windows/VisualStateGroup.cs,
	VSM/System/Windows/VisualStateChangedEventArgs.cs: revert a chunk
	of an early patch which attempted to use unmanaged events for
	these completely managed events.

	r: andreia

2009-07-24  Alan McGovern  <amcgovern@novell.com>

	* VSM/System/Windows/VisualStateGroup.cs: Copy/paste bug here.
	  Register/Unregister the correct events and handlers for
	  CurrentStateChanged.

2009-07-07  Alan McGovern  <amcgovern@novell.com>

	* VSM/System/Windows/VisualStateGroup.cs:
	* VSM/System/Windows/VisualStateManager.cs: Update VSM so that
	  it works now that we have better namescope handling.

2009-03-06  Alan McGovern  <amcgovern@novell.com>

	* VSM/System/Windows/VisualStateManager.cs: Update VSM so that
	  it doesn't crash and burn with PropertyPaths created from
	  DependencyProperties.

2009-03-06  Alan McGovern  <amcgovern@novell.com>

	* ChangeLog:
	* VSM/System/Windows/VisualStateManager.cs: Revert - I didn't
	  mean to commit that yet. It's not complete.

2009-03-05  Alan McGovern  <amcgovern@novell.com>

	* VSM/System/Windows/VisualStateManager.cs: The PathParameters
	  supplied to PropertyPath are always guaranteed to be of
	  length 0. There is no point in storing them, exposing them
	  or comparing them.

2009-02-18  Jeffrey Stedfast  <fejj@novell.com>

	* VSM/System/Windows/VisualStateGroup.cs: Default the name to "".

2009-02-02  Chris Toshok  <toshok@ximian.com>

	* VSM/System/Windows/VisualState.cs: use a hack to get around our
	lack of support for RuntimeNameProperty (use the
	DependencyObject.NameProperty for Name for the time being.)

2009-01-30  Chris Toshok  <toshok@ximian.com>

	* VSM/System/Windows/VisualStateManager.cs: dubious change - the
	type Collection<VisualStateGroup> is *mostly* hidden, and is
	reflected as IList to managed code.  so let's take advantage of
	this fact to make things MUCH easier on us, and make it a subclass